--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<h1>Testing</h1>
+<html>
+<head>
+	<title>My Final Project Title</title>
+	<link rel="stylesheet" type="text/css" href="./master.css">
+</head>
+<body>
+	<div id="wrapper">
+		<h1>Zodiac Teller</h1>
+		<form onsubmit="return calZodiac();">
+			<p>
+				<input id="fname" name="fname" type="text" placeholder="First Name" required>
+			</p>
+			<p>
+				<input id="lname" name="lname" type="text" placeholder="Last Name" required>
+			</p>
+			<p>
+				<input id="bDay" name="bDay" type="date" required>
+			</p>
+			<p>
+				<input type="submit" >
+			</p>
+		</form>
+		<div id="displayMsg">
+
+		</div>
+	</div>
+	<script src="./master.js"></script>
+</body>
+</html>
