Changed layout and styles of page. Created a two column layout

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
 	<div id="wrapper">
 		<h1>Zodiac Teller</h1>
-
+		<h3><a href="">Need Help?</a></h3>
+		<div class="container">
 		<form onsubmit="return calZodiac();">
 			<p>
 				<input id="fname" name="fname" type="text" placeholder="First Name" required>
@@ -23,7 +24,8 @@
 			</p>
 		</form>
 		<div id="displayMsg">
-
+			This is where the user's horoscope and other information will be given.
+		</div>
 		</div>
 		<div id="zodiac_buttons">
 			<button type="button" id="Capicorn" placeholder="Capicorn">Capicorn</button>
@@ -39,6 +41,8 @@
 			<button type="button" id="Scorpio" placeholder="Scorpio">Scorpio</button>
 			<button type="button" id="Sagittarius" placeholder="Sagittarius">Sagittarius</button>
 		</div>
+
+		<div id="H"
 
 	</div>
 	<script src="./master.js"></script>
