--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			</p>
 		</form>
 		<div id="displayMsg">
-			This is where the user's horoscope and other information will be given.
+			This window is where the user's horoscope and other information will be given.
 		</div>
 		</div>
 		<div id="zodiac_buttons">
