--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
 	<title>My Final Project Title</title>
 	<link rel="stylesheet" type="text/css" href="./master.css">
-	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 </head>
 <body>
 	<div id="wrapper">
-		<h1>Zodiac Teller</h1>
+		<h1>What Exercise are You?</h1>
 		<h3><a href="">Need Help?</a></h3>
 		<div class="container">
 		<form onsubmit="return calZodiac();">
@@ -28,18 +28,19 @@
 		</div>
 		</div>
 		<div id="zodiac_buttons">
-			<button type="button" id="Capicorn" placeholder="Capicorn">Capicorn</button>
-			<button type="button" id="Aquarius" placeholder="Aquarius">Aquarius</button>
-			<button type="button" id="Pisces" placeholder="Pisces">Pisces</button>
-			<button type="button" id="Aries" placeholder="Aries">Aries</button>
-			<button type="button" id="Taurus" placeholder="Taurus">Taurus</button>
-			<button type="button" id="Gemini" placeholder="Gemini">Gemini</button>
-			<button type="button" id="Cancer" placeholder="Cancer">Cancer</button>
-			<button type="button" id="Leo" placeholder="Leo">Leo</button>
-			<button type="button" id="Virgo" placeholder="Virgo">Virgo</button>
-			<button type="button" id="Libra" placeholder="Libra">Libra</button>
-			<button type="button" id="Scorpio" placeholder="Scorpio">Scorpio</button>
-			<button type="button" id="Sagittarius" placeholder="Sagittarius">Sagittarius</button>
+			<button type="button" id="Capicorn" placeholder="Capicorn"><img src="./Photos/dips.svg"></button>
+			<button type="button" id="Aquarius" placeholder="Aquarius"><img src="./Photos/bench.svg"></button>
+			<button type="button" id="Pisces" placeholder="Pisces"><img src="./Photos/crunch.svg"></button>
+			<button type="button" id="Aries" placeholder="Aries"><img src="./Photos/curls.svg"></button>
+			<button type="button" id="Taurus" placeholder="Taurus"><img src="./Photos/deadlift.svg"></button>
+			<button type="button" id="Gemini" placeholder="Gemini"><img src="./Photos/lunge.svg"></button>
+			<button type="button" id="Cancer" placeholder="Cancer"><img src="./Photos/ohp.svg"></button>
+			<button type="button" id="Leo" placeholder="Leo"><img src="./Photos/pullup.svg"></button>
+			<button type="button" id="Virgo" placeholder="Virgo"><img src="./Photos/pushup.svg"></button>
+			<button type="button" id="Libra" placeholder="Libra"><img src="./Photos/row.svg"></button>
+			<button type="button" id="Sagittarius" placeholder="Sagittarius"><img src="./Photos/skullcrusher.svg"></button>
+			<button type="button" id="Scorpio" placeholder="Scorpio"><img src="./Photos/squat.svg"></button>
+
 		</div>
 
 		<div id="H"
