Changed title of site and added a h2 and added a hover state for the images

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
 <head>
-	<title>My Final Project Title</title>
+	<title>Exercise Teller</title>
 	<link rel="stylesheet" type="text/css" href="./master.css">
 	<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 </head>
 <body>
 	<div id="wrapper">
 		<h1>What Exercise are You?</h1>
+		<h2>Enter your information below to find your unique exercise!</h2>
 		<h3><a href="">Need Help?</a></h3>
 		<div class="container">
 		<form onsubmit="return calZodiac();">
