changed 'horoscope’ to ‘exercise’

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</p>
 		</form>
 		<div id="displayMsg">
-			This window is where the user's horoscope and other information will be given.
+			This window is where the user's exercise and other information will be given.
 		</div>
 		</div>
 		<div id="zodiac_buttons">
