Finished up the majority of the design, mostly javascript additions

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 	<title>Exercise Teller</title>
 	<link rel="stylesheet" type="text/css" href="./master.css">
 	<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
 </head>
 <body>
 	<div id="wrapper">
 		<h1>What Exercise are You?</h1>
 		<h2>Enter your information below to find your unique exercise!</h2>
-		<h3><a href="">Need Help?</a></h3>
 		<div class="container">
 		<form onsubmit="return calZodiac();">
 			<p>
@@ -25,9 +25,10 @@
 			</p>
 		</form>
 		<div id="displayMsg">
-			This window is where the user's exercise and other information will be given.
+			Fill out the form to the left or click on one of the exercises below!
 		</div>
 		</div>
+		<hr>
 		<div id="zodiac_buttons">
 			<button type="button" id="Capicorn" placeholder="Capicorn"><img src="./Photos/dips.svg"></button>
 			<button type="button" id="Aquarius" placeholder="Aquarius"><img src="./Photos/bench.svg"></button>
@@ -44,7 +45,6 @@
 
 		</div>
 
-		<div id="H"
 
 	</div>
 	<script src="./master.js"></script>
