Gifs and Sounds
Added gifs and sounds to the page, and changed the css to make the page
more compact

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>Exercise Teller</title>
 	<link rel="stylesheet" type="text/css" href="./master.css">
 	<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 </head>
 <body>
 	<div id="wrapper">
@@ -45,7 +45,8 @@
 
 		</div>
 
-
+	<audio id="sound" src="Sound/sound.wav"></audio>
+	<audio id="screaming" src="Sound/screaming.wav"></audio>
 	</div>
 	<script src="./master.js"></script>
 </body>
