--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="./master.css">
 	<link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 <body>
 	<div id="wrapper">
@@ -24,7 +25,7 @@
 				<input type="submit" id="submit">
 			</p>
 		</form>
-		<div id="displayMsg">
+		<div id="displayMsg" class="">
 			Fill out the form to the left or click on one of the exercises below!
 		</div>
 		</div>
@@ -47,7 +48,9 @@
 
 	<audio id="sound" src="Sound/sound.wav"></audio>
 	<audio id="screaming" src="Sound/screaming.wav"></audio>
+	<audio id="background" src="Sound/background.mp3" autoplay loop></audio>
 	</div>
 	<script src="./master.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </body>
 </html>
