--- a/index.html
+++ b/index.html
@@ -47,8 +47,18 @@
 		</div>
 
 	<audio id="sound" src="Sound/sound.wav"></audio>
+	<audio id="screaming_1" src="Sound/screaming_1.wav"></audio>
+	<audio id="screaming_2" src="Sound/scream_2.wav"></audio>
 	<audio id="screaming" src="Sound/screaming.wav"></audio>
 	<audio id="background" src="Sound/background.mp3" autoplay loop></audio>
+	<audio id="sound_1" src="Sound/sound_1.mp3"></audio>
+	<audio id="sound_2" src="Sound/sound_2.mp3"></audio>
+	<audio id="sound_3" src="Sound/sound_3.mp3"></audio>
+	<audio id="sound_4" src="Sound/sound_4.mp3"></audio>
+	<audio id="sound_5" src="Sound/sound_5.mp3"></audio>
+	<audio id="sound_6" src="Sound/sound_6.mp3"></audio>
+	<audio id="sound_7" src="Sound/sound_7.mp3"></audio>
+	<audio id="sound_8" src="Sound/sound_8.mp3"></audio>
 	</div>
 	<script src="./master.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
